[package]
name = "tide-websockets"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "tide websockets"
readme = "README.md"
repository = "https://github.com/http-rs/tide-websockets"
documentation = "https://docs.rs/tide-websockets"
license = "MIT OR Apache-2.0"
keywords = ["tide", "websockets"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-tungstenite = "0.10.0"
sha-1 = "0.9.2"
base64 = "0.13.0"
tide = "0.15.0"
futures-util = "0.3.8"
pin-project = "1.0.2"
async-dup = "1.2.2"
serde_json = "1.0.60"
serde = "1.0.117"
async-std = "1.7.0"

[dev-dependencies]
env_logger = "0.8.2"
async-std = { version = "1.7.0", features = ["attributes"] }
