[package]
name = "tide-websockets"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "tide websockets"
readme = "README.md"
repository = "https://github.com/http-rs/tide-websockets"
documentation = "https://docs.rs/tide-websockets"
license = "MIT OR Apache-2.0"
keywords = ["tide", "websockets"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-tungstenite = "0.17.0"
sha-1 = "0.9.6"
base64 = "0.13.0"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
futures-util = "0.3.15"
pin-project = "1.0.7"
async-dup = "1.2.2"
serde_json = "1.0.64"
serde = "1.0.126"
async-std = "1.9.0"

[dev-dependencies]
env_logger = "0.8.3"
async-std = { version = "1.9.0", features = ["attributes"] }
