[package]
name = "tide-websockets"
version = "0.5.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "tide websockets"
repository = "https://github.com/http-rs/tide-websockets"
license = "MIT OR Apache-2.0"
keywords = ["tide", "websockets"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-dup = "1.2.2"
async-std = "1.9.0"
async-tungstenite = "0.22.2"
base64 = "0.21.0"
futures-util = "0.3.15"
serde = "1.0.126"
serde_json = "1.0.64"
sha1 = "0.10.5"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.10.0"
